crates/macros/tests/fail/fixed-layout/non-sized-fixed-layout.rs
use macros::FixedLayout;

fn main() {
    mem_markers::fixed_layout::ensure::<&str>();
}
